Fixed spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -547,18 +547,8 @@ width: 100%;
   padding-bottom: 50px;
 }
 
-.video-description {
-  line-height: 100px;
-  width: 350px;
-  height: 150px;
-}
-
 .learn-info {
   text-align: center;
-}
-
-.link-separator {
-  width: 6%;
 }
 
 /* CONTACT */
